force-app/main/default/objects/Loyalty__c/Loyalty__c.object-meta.xml
<CustomObject>
    <label>Loyalty</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Loyalty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>