force-app/main/default/objects/Loyalty__c/fields/Casino__c.field-meta.xml
<CustomField>
    <fullName>Casino__c</fullName>
    <label>Casino $ Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>