force-app/main/default/objects/Loyalty__c/fields/Casino_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Casino_Expiry_Date__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Casino $$ Expiry Date</label>
    <type>Date</type>
</CustomField>