force-app/main/default/objects/Loyalty__c/fields/CasinoBalance__c.field-meta.xml
<CustomField>
    <fullName>CasinoBalance__c</fullName>
    <label>Casino $ Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>