force-app/main/default/objects/Loyalty__c/fields/Comp__c.field-meta.xml
<CustomField>
    <fullName>Comp__c</fullName>
    <label>Comp $ Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>