force-app/main/default/objects/Loyalty__c/fields/Comp_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Comp_Expiry_Date__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Comp $$ Expiry Date</label>
    <type>Date</type>
</CustomField>