force-app/main/default/objects/Loyalty__c/fields/Comp_Parking_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Comp_Parking_Entitlement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comp Parking Entitlement</label>
    <length>250</length>
    <type>Text</type>
</CustomField>