force-app/main/default/objects/Loyalty__c/fields/Comp_Room_Night_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Comp_Room_Night_Entitlement__c</fullName>
    <label>Comp Nights Entitlement</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>