force-app/main/default/objects/Loyalty__c/fields/Comp_Room_night_remaining_for_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Comp_Room_night_remaining_for_the_Month__c</fullName>
    <label>Comp Nights for the Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>