force-app/main/default/objects/Loyalty__c/fields/Comp_Room_Night_Used__c.field-meta.xml
<CustomField>
    <fullName>Comp_Room_Night_Used__c</fullName>
    <label>Comp Room Night Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>