force-app/main/default/objects/Loyalty__c/fields/CompBalance__c.field-meta.xml
<CustomField>
    <fullName>CompBalance__c</fullName>
    <label>Comp $ Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>