force-app/main/default/objects/Loyalty__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactLookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty (ContactLookup)</relationshipLabel>
    <relationshipName>Loyalty2</relationshipName>
    <type>Lookup</type>
</CustomField>