force-app/main/default/objects/Loyalty__c/fields/CRN_Remaining__c.field-meta.xml
<CustomField>
    <fullName>CRN_Remaining__c</fullName>
    <label>CRN Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>