force-app/main/default/objects/Loyalty__c/fields/currentTierImage__c.field-meta.xml
<CustomField>
    <fullName>currentTierImage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>currentTierImage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>