force-app/main/default/objects/Loyalty__c/fields/DD_Schedule__c.field-meta.xml
<CustomField>
    <fullName>DD_Schedule__c</fullName>
    <description>Returns integer corresponding to the day of the month, from 1 to 31 salesforce formula</description>
    <formula>DAY(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Schedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>