force-app/main/default/objects/Loyalty__c/fields/F_B_Discount_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>F_B_Discount_Entitlement__c</fullName>
    <label>F&amp;B Discount Entitlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>