force-app/main/default/objects/Loyalty__c/fields/Home_Property__c.field-meta.xml
<CustomField>
    <fullName>Home_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Loyalty</relationshipLabel>
    <relationshipName>Loyalty</relationshipName>
    <type>Lookup</type>
</CustomField>