force-app/main/default/objects/Loyalty__c/fields/Host_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Host_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host Entitlement</label>
    <type>Checkbox</type>
</CustomField>