force-app/main/default/objects/Loyalty__c/fields/Host_GC__c.field-meta.xml
<CustomField>
    <fullName>Host_GC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - GC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty (Host - GC)</relationshipLabel>
    <relationshipName>Loyalty3</relationshipName>
    <type>Lookup</type>
</CustomField>