force-app/main/default/objects/Loyalty__c/fields/Host_International__c.field-meta.xml
<CustomField>
    <fullName>Host_International__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host - International</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loyalty2</relationshipName>
    <type>Lookup</type>
</CustomField>