force-app/main/default/objects/Loyalty__c/fields/Host_IS_TRUE1__c.field-meta.xml
<CustomField>
    <fullName>Host_IS_TRUE1__c</fullName>
    <formula>IF (Logged_In_User__c  = &quot;0055O000000yZNfQAM&quot; ,0,1)</formula>
    <label>Host IS TRUE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>