force-app/main/default/objects/Loyalty__c/fields/Host_is_True__c.field-meta.xml
<CustomField>
    <fullName>Host_is_True__c</fullName>
    <formula>IF( OR (Patron__r.Host_Sydney__c=$User.Id,
Patron__r.Host_GC__c=$User.Id,
Patron__r.Host_Brisbane__c=$User.Id,
Patron__r.Host_International__c=$User.Id),TRUE,FALSE)</formula>
    <label>Host is True</label>
    <type>Checkbox</type>
</CustomField>