force-app/main/default/objects/Loyalty__c/fields/Hotel_Discount_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Discount_Entitlement__c</fullName>
    <label>Hotel Discount Entitlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>