force-app/main/default/objects/Loyalty__c/fields/Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Joined Date (Verified)</label>
    <type>Date</type>
</CustomField>