force-app/main/default/objects/Loyalty__c/fields/Last_Successful_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Successful Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>