force-app/main/default/objects/Loyalty__c/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <label>Loyalty Program</label>
    <referenceTo>Loyalty_Program__c</referenceTo>
    <relationshipLabel>Loyalty</relationshipLabel>
    <relationshipName>Loyalty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>