force-app/main/default/objects/Loyalty__c/fields/Most_Played_Property__c.field-meta.xml
<CustomField>
    <fullName>Most_Played_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Played Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Loyalty (Most Played Property)</relationshipLabel>
    <relationshipName>Loyalty1</relationshipName>
    <type>Lookup</type>
</CustomField>