force-app/main/default/objects/Loyalty__c/fields/Next_Tier__c.field-meta.xml
<CustomField>
    <fullName>Next_Tier__c</fullName>
    <description>To store next tier name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Tier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>