force-app/main/default/objects/Loyalty__c/fields/NextTierImage__c.field-meta.xml
<CustomField>
    <fullName>NextTierImage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NextTierImage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>