force-app/main/default/objects/Loyalty__c/fields/Nominated_Partner__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominated Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty (Nominated Loyalty Partner)</relationshipLabel>
    <relationshipName>Loyalty1</relationshipName>
    <type>Lookup</type>
</CustomField>