force-app/main/default/objects/Loyalty__c/fields/Nominated_Partner_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Partner_Indicator__c</fullName>
    <label>Nominated Partner Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>