force-app/main/default/objects/Loyalty__c/fields/Partner_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Entitlement</label>
    <type>Checkbox</type>
</CustomField>