force-app/main/default/objects/Loyalty__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty</relationshipLabel>
    <relationshipName>Loyalty</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>