force-app/main/default/objects/Loyalty__c/fields/Points_to_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Points_to_Lifetime__c</fullName>
    <label>Points to Lifetime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>