force-app/main/default/objects/Loyalty__c/fields/Points_to_Next_Comp_Room_Night__c.field-meta.xml
<CustomField>
    <fullName>Points_to_Next_Comp_Room_Night__c</fullName>
    <label>Points to Next Comp Room Night</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>