force-app/main/default/objects/Loyalty__c/fields/Points_To_Next_Tier__c.field-meta.xml
<CustomField>
    <fullName>Points_To_Next_Tier__c</fullName>
    <label>Points To Next Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>