force-app/main/default/objects/Loyalty__c/fields/Points_to_Retain_Current_Tier__c.field-meta.xml
<CustomField>
    <fullName>Points_to_Retain_Current_Tier__c</fullName>
    <label>Points to Retain Current Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>