force-app/main/default/objects/Loyalty__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Rank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>