force-app/main/default/objects/Loyalty__c/fields/Review_CountdownImage__c.field-meta.xml
<CustomField>
    <fullName>Review_CountdownImage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Countdown Image</label>
    <length>200</length>
    <type>Text</type>
</CustomField>