force-app/main/default/objects/Loyalty__c/fields/Sovereign_Room_Access__c.field-meta.xml
<CustomField>
    <fullName>Sovereign_Room_Access__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>PGA Customer Screening</label>
    <length>20</length>
    <type>Text</type>
</CustomField>