force-app/main/default/objects/Loyalty__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>