force-app/main/default/objects/Loyalty__c/fields/Tier_Balance__c.field-meta.xml
<CustomField>
    <fullName>Tier_Balance__c</fullName>
    <label>Tier Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>