force-app/main/default/objects/Loyalty__c/fields/Tier_Points_Earned_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Tier_Points_Earned_This_Week__c</fullName>
    <label>Tier Points Earned This Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>