force-app/main/default/objects/Loyalty__c/fields/Tier_Review_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Tier_Review_Countdown__c</fullName>
    <formula>Tier_Review_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Review Countdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>