force-app/main/default/objects/Loyalty__c/fields/Tier_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Tier_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tier Review Date</label>
    <type>Date</type>
</CustomField>