force-app/main/default/objects/Loyalty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Patron__c</columns>
    <columns>NAME</columns>
    <columns>Tier_Points_Earned_This_Month__c</columns>
    <columns>Tier_Points_Earned_This_Week__c</columns>
    <columns>Tier_Points_Earned_Today__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>